--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-04-02 13:28+0000\n"
+"POT-Creation-Date: 2015-04-03 07:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -242,6 +242,10 @@ msgstr "Dernière mise à jour"
 #: bountyomatic/bounties/models.py:63
 msgid "Is private"
 msgstr "Privée"
+
+#: bountyomatic/bounties/models.py:66
+msgid "bounties"
+msgstr "primes"
 
 #: bountyomatic/bounties/models.py:84
 msgid "Your character and target must be different."
