--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -905,8 +905,9 @@ msgid ""
 "\"_blank\">Geoffrey</a>, Python web developer and World of Warcraft player "
 "since 10 years.<br>More questions? You can reach me via email:"
 msgstr ""
-"Je suis Bodoc, puissant guerrier dans la Compagnie Bras Cassé "
-"(EU - Culte de la Rive Noire). En vrai, je suis Geoffrey, développeur web "
+"Je suis Bodoc, puissant guerrier de la Compagnie Bras Cassé "
+"(EU - Culte de la Rive Noire). En vrai, je suis <a href=\"http://socketubs.org\" target="
+"\"_blank\">Geoffrey</a>, développeur web "
 "Python et joueur depuis une dizaine d'années sur World of Warcraft. "
 "N'hésitez pas à me contacter via l'email suivante :"
 
