--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -984,12 +984,12 @@ msgstr "Qui est derrière Bounty-O-Matic ?"
 msgid ""
 "I'm Bodoc, mighty warrior of \"La Compagnie Bras Cassé\" (EU - Culte de la "
 "Rive Noire). In real life, I'm <a href=\"http://socketubs.org\" target="
-"\"_blank\">Geoffrey</a>, Python web developer and World of Warcraft player "
+"\"_blank\">toxinu</a>, Python web developer and World of Warcraft player "
 "since 10 years.<br>More questions? You can reach me via email:"
 msgstr ""
 "Je suis Bodoc, puissant guerrier de la Compagnie Bras Cassé (EU - Culte de "
 "la Rive Noire). En vrai, je suis <a href=\"http://socketubs.org\" target="
-"\"_blank\">Geoffrey</a>, développeur web Python et joueur depuis une dizaine "
+"\"_blank\">toxinu</a>, développeur web Python et joueur depuis une dizaine "
 "d'années sur World of Warcraft. N'hésitez pas à me contacter via l'email "
 "suivante :"
 
